# codexsandbox

./: .gitignore  Package.swift  run-app.sh
CVER/SlopSandboxCpp/src/: main.cpp
SlopSandbox.app/Contents/: Info.plist
SlopSandbox.app/Contents/MacOS/: SlopSandbox
SlopSandboxCpp/: CMakeLists.txt
SlopSandboxCpp/src/: main.cpp
Sources/SlopSandbox/: SlopSandbox.swift  SlopSandboxApp.swift
Sources/WaveKeyboardApp/: WaveKeyboardApp.swift  WaveScreen.swift
WaveKeyboard.app/Contents/: Info.plist
WaveKeyboard.app/Contents/MacOS/: WaveKeyboard
